fix(common): Fix css progression card align item + search anyCase char

--- a/src/main/resources/public/sass/global/components/_progression-tree.scss
+++ b/src/main/resources/public/sass/global/components/_progression-tree.scss
@@ -180,7 +180,7 @@
   padding-bottom: 10px;
 
   .flex-card {
-    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 5px;
     cursor: pointer;
 
